# phasar

./: .gitignore  CMakeLists.txt  CMakeSettings.json
cmake/: phasar_macros.cmake
examples/llvm-hello_world/: Makefile
include/phasar/Config/: Configuration.h
include/phasar/PhasarLLVM/DataFlowSolver/IfdsIde/: EdgeFunctionComposer.h  EdgeFunctions.h  FlowEdgeFunctionCache.h  FlowFunctions.h  IDETabulationProblem.h  IFDSTabulationProblem.h  MemoryManager.h  SpecialSummaries.h  ZeroedFlowFunction.h
include/phasar/PhasarLLVM/DataFlowSolver/WPDS/: JoinLatticeToSemiRingElem.h
include/phasar/PhasarLLVM/IfdsIde/: EdgeFact.h  EdgeFactWrapper.h  FlowFact.h  FlowFactWrapper.h  ZeroFlowFact.h
include/phasar/PhasarLLVM/IfdsIde/Solver/: IDESolver.h  IFDSToIDETabulationProblem.h  LLVMIDESolver.h  LLVMIFDSSolver.h
include/phasar/PhasarLLVM/Passes/: GeneralStatisticsPass.h  ValueAnnotationPass.h
include/phasar/PhasarLLVM/Plugins/: PluginFactories.h
include/phasar/PhasarLLVM/WPDS/: WPDSOptions.h
include/phasar/Utils/: Logger.h  SOL.h
lib/Config/: CMakeLists.txt  Configuration.cpp
lib/Controller/: CMakeLists.txt
lib/DB/: CMakeLists.txt
lib/PhasarClang/: CMakeLists.txt
lib/PhasarLLVM/ControlFlow/: CMakeLists.txt
lib/PhasarLLVM/IfdsIde/: CMakeLists.txt  ZeroFlowFact.cpp
lib/PhasarLLVM/IfdsIde/Solver/: IFDSToIDETabulationProblem.cpp
lib/PhasarLLVM/Passes/: CMakeLists.txt
lib/PhasarLLVM/Plugins/: AnalysisPluginController.cpp  CMakeLists.txt  IDETabulationProblemTestPlugin.cxx  IDETabulationProblemTestPlugin.h  IFDSSFB901TaintAnalysis.cxx  IFDSSFB901TaintAnalysis.h  IFDSSimpleTaintAnalysis.cxx  IFDSSimpleTaintAnalysis.h  IFDSTabulationProblemTestPlugin.cxx  IFDSTabulationProblemTestPlugin.h  PluginFactories.cpp
lib/PhasarLLVM/Pointer/: CMakeLists.txt
lib/PhasarLLVM/Utils/: CMakeLists.txt
lib/PhasarLLVM/WPDS/: CMakeLists.txt
lib/PhasarPass/: CMakeLists.txt
lib/Utils/: CMakeLists.txt  Macros.cpp
test/llvm_test_code/taint_analysis/: read.c
tools/phasar/: phasar.cpp
unittests/PhasarLLVM/ControlFlow/: LLVMBasedBackwardCFGTest.cpp  LLVMBasedBackwardICFGTest.cpp  LLVMBasedCFGTest.cpp  LLVMBasedICFGTest.cpp  LLVMBasedICFG_CHATest.cpp  LLVMBasedICFG_DTATest.cpp  LLVMBasedICFG_OTFTest.cpp  LLVMBasedICFG_RTATest.cpp
unittests/PhasarLLVM/DataFlowSolver/IfdsIde/: EdgeFunctionComposerTest.cpp
unittests/PhasarLLVM/IfdsIde/Problems/: IDELinearConstantAnalysisTest.cpp  IDETypeStateAnalysisTest.cpp  IFDSConstAnalysisTest.cpp  IFDSTaintAnalysisTest.cpp  IFDSUninitializedVariablesTest.cpp
unittests/PhasarLLVM/Mono/: InterMonoTaintAnalysisTest.cpp
unittests/PhasarLLVM/Pointer/: LLVMTypeHierarchyTest.cpp  TypeGraphTest.cpp
unittests/Utils/: LLVMIRToSrcTest.cpp  LLVMShorthandsTest.cpp
utils/: install-llvm.sh
(+51 files in other folders)
